--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "typescript": "~4.1.5"
+    "naive-ui": "^2.16.7",
+    "typescript": "~4.1.5",
+    "vfonts": "^0.1.0"
   }
 }
