--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "src/*.ts",
+    "src/*.tsx",
+    "src/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
