--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "lodash": "^4.17.21",
     "tslib": "^2.3.1",
     "vue": "^3.0.0",
