--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "tslib": "^2.3.1",
     "vue": "^3.0.0",
